// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders marker of the icon type matching snapshot 1`] = `
<IconMarker
  containerWidth={100}
  iconUrl="http://example.com/icon.png"
  leftPosition={0}
  onSeek={[Function]}
  onTouch={[Function]}
/>
`;

exports[`Marker renders marker of the text type matching snapshot 1`] = `
<TextMarker
  containerWidth={100}
  leftPosition={0}
  onSeek={[Function]}
  onTouch={[Function]}
  text="Hello, world!"
/>
`;
